--- a/app/src/main/res/layout/activity_new_text_post.xml
+++ b/app/src/main/res/layout/activity_new_text_post.xml
@@ -128,13 +128,36 @@
                         app:cornerRadius="5dp" />
                 </RelativeLayout>
 
-                <!--<View
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="70dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginEnd="50dp"
-                    android:background="@android:color/darker_gray" />-->
+                    android:layout_marginEnd="70dp"
+                    android:background="#eee" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop="12dp"
+                        android:fontFamily="@font/productsans"
+                        android:text="Font Face:"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/text_post_spinner"
+                        style="@style/Widget.AppCompat.Spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"/>
+                </RelativeLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
